	* Moved the 'AlgoComboBox' widget out of the convenience library
	into 'davit/'.
2025-07-30 Fred Gleason <fredg@paravelsystems.com>
	* Moved the 'ChangePassword' dialog out of the convenience library
	into 'davit/'.
2025-07-31 Fred Gleason <fredg@paravelsystems.com>
	* Moved the 'DvtDateDialog' dialog out of the convenience library
	into 'davit/'.
	* Moved the 'DvtDatePicker' widget out of the convenience library
	into 'davit/'.
	* Moved the 'DvtDialog' dialog out of the convenience library
	into 'davit/'.
	* Moved the 'DvtFontEngine' class out of the convenience library
	into 'davit/'.
	* Moved the 'DvtLabel' widget out of the convenience library
	into 'davit/'.
	* Moved the 'DvtListSelector' widget out of the convenience library
	into 'davit/'.
	* Moved the 'Login' dialog out of the convenience library
	into 'davit/'.
	* Moved the 'state_conv' module out of the convenience library
	into 'davit/'.
	* Moved the 'DvtTableView' widget out of the convenience library
	into 'davit/'.
	* Moved the 'DvtTextFile' dialog out of the convenience library
	into 'davit/'.
	* Moved the 'DvtTransportButton' widget out of the convenience
	library	into 'davit/'.
	* Moved the 'DvtWidget' widget out of the convenience library
	into 'davit/'.
2025-07-31 Fred Gleason <fredg@paravelsystems.com>
	* Refactored linking for dvtstamp(8), dvtdbcheck(8) and davit.cgi so
	as to avoid linking to Qt's GUI components.
2025-08-01 Fred Gleason <fredg@paravelsystems.com>
	* Removed vestigal 'Add Program' dialog from davit(1).
	* Removed vestigal 'Add Provider' dialog from davit(1).
	* Removed dead code from 'davit/add_affiliate'.
	* Refactored the 'Add Remark' dialog in davit(1).
	* Refactored the 'Set Report Parameters' dialog in davit(1).
	* Added a 'FontEngine::config()' method in davit(1).
2025-08-04 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the 'Select Date' dialog in davit(1).
2025-08-04 Fred Gleason <fredg@paravelsystems.com>
	* Removed dead code from davit(1).